# nodina

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: .cibuildwheel.toml
.github/workflows/: release.yml
benchmarks/: BASELINE.md  RESULTS.md  bench.py  freethreading_demo.py  reference.py  workloads.py
nodina/: __init__.py  __init__.pyi  _agent.py  _agent.pyx  _core.pxd
nodina/core/: nodina_core.c  nodina_core.h  nodina_pool.c  nodina_pool.h
tests/: test_nodina_agent.py
