[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0", "cython>=3.2.6"]
build-backend = "setuptools.build_meta"

[project]
name = "nodina"
version = "0.1.0"
description = "Ultra fast agents for nodnod"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "nodnod>=1.0.2",
]

[dependency-groups]
dev = [
  "ruff>=0.15.20",
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "cython>=3.2.6",
  "setuptools>=82.0.1",
  "wheel>=0.47.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
  "I",
  "D",
  "N",
  "PLR",
  "Q",
  "COM",
  "TC",
  "YTT",
  "SIM",
  "RUF022",
]
ignore = [
  "COM812",
  "N805",
  "N818",
  "TC001",
  "TC002",
  "TC003",
  "TC004",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D202",
  "D203",
  "D205",
  "D209",
  "D211",
  "D213",
  "D400",
  "D401",
  "D404",
  "D415",
  "N802",
  "PLR2004",
  "PLR0911",
  "PLR0912",
  "PLR0913"
]
fixable = ["ALL"]
unfixable = ["ERA"]
exclude = [".venv", ".idea", ".cache", ".pytest_cache", "build", "vendor/libuv"]

[tool.pyright]
exclude = [
  ".venv",
  ".idea",
  ".cache",
  ".ruff_cache",
  ".pytest_cache",
  "vendor/libuv",
  "tests",
]
typeCheckingMode = "basic"
pythonPlatform = "All"
pythonVersion = "3.14"
reportMissingImports = true
reportMissingTypeStubs = false
reportSelfClsParameterName = false
